hermes_fuzz_executed/fuzz_44_execution
'use strict';
let third = (new Map()).set('third', 125);
third.set('third', 126);
let fourth = third[third];
first.set('first', 123);
second.set('second', 124);
console.log(third);   
console.log(third);   
 
'use strict';
import'module/module.js';  

import('react/lib/index.js');  

console.log(React);  
console.log((() => {})());   

console.log(global);  
'use strict';
 
 
'use strict';
let count = 0;
for(let i of [1...4]){count+=1}
console.log(count);

'use strict';
setTimeout(() => {
   
  console.log(1);
}, 1000);
'use strict';
let count = 0;
let arr = [];
for(let i of arr){count+=1}
console.log(count);

'use strict';
let count = 0;
let set = new Set();
set.add(1);
for(let i of set){count+=1}
console.log(count);
 
'use strict';
 


Execution Output ------------------:
test.js:24:18: error: 'identifier' expected after '.' or '?.' in member expression
for(let i of [1...4]){count+=1}
              ~~~^
test.js:24:18: error: ')' expected after 'for(... in/of ...'
for(let i of [1...4]){count+=1}
   ~~~~~~~~~~~~~~^
